# natuurgegevens-dashboard

./: .gitignore  README.md  pyproject.toml
natuurgegevens_dashboard/: configs.py  flora.py  utils.py  vegetatie.py  vogels.py
